fix header alignment on mobile devices

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 header {
     background-color: #add8e6;
     color: white;
-    padding: 30px 60px;
+    padding: 20px 25px;
 }
 
 nav ul {
@@ -23,7 +23,7 @@ nav li {
 nav a {
     text-decoration: none;
     color: black;
-    padding: 10px;
+    padding: 20px;
     transition: background-color 0.3s ease;
 }
 
@@ -55,9 +55,16 @@ section {
     text-align: center;
 }
 
-@media (max-width: 600px) {
-    section {
-        width: 95%; /* Adjust for smaller screens */
+@media (max-width: 650px) {
+    /* section {
+        width: 95%;
+    } */
+    
+    header {
+        background-color: #add8e6;
+        color: white;
+        padding: 10px;
+        align-items: center;
     }
     
     nav ul {
@@ -74,6 +81,7 @@ section {
     nav a {
         display: block;
         width: 100%;
-        padding: 15px;
+        justify-content: center;
+        padding: 10px 0px;
     }
 }
